<resources>
    <string name="app_name">LuxeVistaResort</string>
    <string name="cancel">Cancel</string>
    <string name="rooms">Rooms</string>
    <string name="room_1">Room 1</string>
    <string name="adults">Adult(s)</string>
    <string name="remove_adult">Remove Adult</string>
    <string name="add_adult">Add Adult</string>
    <string name="children_under_12">Children (under 12)</string>
    <string name="remove_child">Remove Child</string>
    <string name="add_child">Add Child</string>
    <string name="add_room">+ Add room</string>
    <string name="done">DONE</string>
    <string name="go_back">Go Back</string>
    <string name="app_logo">App Logo</string>
    <string name="luxevista_resort">LuxeVista Resort</string>
    <string name="dining">Dining</string>
    <string name="spa">Spa</string>
    <string name="health">Health</string>
    <string name="lakeside">Lakeside</string>
    <string name="summary_dates_placeholder">Mon 15 Oct - Sat 18 Oct</string>
    <string name="adults_icon">Adults Icon</string>
    <string name="summary_guests_placeholder">Room 1, Adult 2, Children 0</string>
    <string name="change_guests">Change Guests</string>
    <string name="regular_room_rates_description">Experience comfort and style with our regular room rates.</string>
    <string name="price_range">Price Range</string>
    <string name="room_type">Room Type</string>
    <string name="bed_type">Bed Type</string>
    <string name="luxe_vista_resort_title">luxe_vista_resort</string>
    <string name="experience_comfort_and_style">experience_comfort_and_style</string>
    <string name="dates">Dates</string>
    <string name="guests">Guests</string>
    <string name="select_dates">Select Dates</string>
    <string name="check_in">Check-in</string>
    <string name="check_in_date">15</string>
    <string name="check_in_month_year">WED OCT</string>
    <string name="check_out">Check-out</string>
    <string name="check_out_date">18</string>
    <string name="check_out_month_year">SAT OCT</string>
    <string name="previous_month">Previous Month</string>
    <string name="month_year_placeholder">OCT 2025</string>
    <string name="next_month">Next Month</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="ok">OK</string>
</resources>